{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 93,
  "lineage": "5127f942-9a3f-b106-b58f-a880120e9637",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:network-acl/acl-01eea340be04208db",
            "default_network_acl_id": "acl-01eea340be04208db",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-01eea340be04208db",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "648378716943",
            "subnet_ids": [
              "subnet-05c2359130ba3eb95"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0a302cab18567c6b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:route-table/rtb-011c9d283744cdc09",
            "default_route_table_id": "rtb-011c9d283744cdc09",
            "id": "rtb-011c9d283744cdc09",
            "owner_id": "648378716943",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09788bac3f8656ea7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a302cab18567c6b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:security-group/sg-09b461d0b2eeb8a9d",
            "description": "default VPC security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b461d0b2eeb8a9d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "default",
            "owner_id": "648378716943",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0a302cab18567c6b9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02e7a96bb31f4ffef",
            "association_id": "eipassoc-005262998ca6f4ab2",
            "domain": "vpc",
            "id": "eipalloc-02e7a96bb31f4ffef",
            "instance": "i-09e46bbc7483aafb7",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-0a5b9f17e7a998899",
            "private_dns": "ip-10-0-1-140.eu-west-2.compute.internal",
            "private_ip": "10.0.1.140",
            "public_dns": "ec2-35-177-51-185.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.51.185",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_default_security_group.example",
            "aws_instance.example",
            "aws_key_pair.example",
            "aws_network_interface.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03e88be9ecff64781",
            "arn": "arn:aws:ec2:eu-west-2:648378716943:instance/i-09e46bbc7483aafb7",
            "associate_public_ip_address": false,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e46bbc7483aafb7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mykey1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0a5b9f17e7a998899"
              }
            ],
            "primary_network_interface_id": "eni-0a5b9f17e7a998899",
            "private_dns": "ip-10-0-1-140.eu-west-2.compute.internal",
            "private_ip": "10.0.1.140",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0afeea56946d3e6bc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c2359130ba3eb95",
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09b461d0b2eeb8a9d"
            ]
          },
          "dependencies": [
            "aws_default_security_group.example",
            "aws_key_pair.example",
            "aws_network_interface.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:internet-gateway/igw-09788bac3f8656ea7",
            "id": "igw-09788bac3f8656ea7",
            "owner_id": "648378716943",
            "vpc_id": "vpc-0a302cab18567c6b9"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:network-interface/eni-0a5b9f17e7a998899",
            "id": "eni-0a5b9f17e7a998899",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "06:ea:a9:71:74:2a",
            "owner_id": "648378716943",
            "private_ip": "10.0.1.140",
            "private_ip_list": [
              "10.0.1.140"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.140"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09b461d0b2eeb8a9d"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05c2359130ba3eb95"
          },
          "dependencies": [
            "aws_default_security_group.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0393fdef8f46df199",
            "route_table_id": "rtb-011c9d283744cdc09",
            "subnet_id": "subnet-05c2359130ba3eb95"
          },
          "dependencies": [
            "aws_default_route_table.example",
            "aws_internet_gateway.example",
            "aws_subnet.example",
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:subnet/subnet-05c2359130ba3eb95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c2359130ba3eb95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "648378716943",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a302cab18567c6b9"
          },
          "dependencies": [
            "aws_vpc.example"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:648378716943:vpc/vpc-0a302cab18567c6b9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01eea340be04208db",
            "default_route_table_id": "rtb-011c9d283744cdc09",
            "default_security_group_id": "sg-09b461d0b2eeb8a9d",
            "dhcp_options_id": "dopt-01d89632e30573af2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a302cab18567c6b9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011c9d283744cdc09",
            "owner_id": "648378716943"
          }
        }
      ]
    }
  ]
}